objects/Local_Authority__c.object
<CustomObject>
    <description>Houses data for the Local Authority and links to MP records</description>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Local Authorities</relationshipLabel>
        <relationshipName>Local_Authorities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Local_Authority_Type__c</fullName>
        <label>Local Authority Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unitary</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCS_Contract_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the NCS Contract Region this local authority forms part of.</description>
        <inlineHelpText>The NCS Contract Region this local authority forms part of.</inlineHelpText>
        <label>NCS Contract Region</label>
        <referenceTo>NCS_Contract_Region__c</referenceTo>
        <relationshipLabel>Local Authorities</relationshipLabel>
        <relationshipName>Local_Authorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Cluster__r.Zone__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Local Authority</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Zone__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Local Authority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Authorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>